Reorder docs to prioritize quantized LLM support over GPT-2
LLM inference (Jlama/llama.cpp) is now the primary focus in both README and HOW-TO-USE. GPT-2 moved to a secondary "Lightweight Alternative" section.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>